# gauss

./: .gitignore  CMakeLists.txt  README.md  gauss.h  gauss_scheme  io.h  local_synchronization.h  lu.h  main.cpp  matrix.h  matrix_generator.h  mtlu.h  reverse_stroke.h  synchronization.h  threads.h
